crates/math-core/tests/snapshots/conversion_test__max_mixed_limits_3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\max\\displaylimits_0\\limits^1\\nolimits"
---
<math>
    <msubsup>
        <mrow><mspace/><mi>max</mi></mrow>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
</math>
