crates/math-core/tests/snapshots/conversion_test__max_with_displaylimits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\max\\displaylimits_0^1"
---
<math>
    <msubsup>
        <mo lspace="0" rspace="0">max</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
</math>
