crates/math-core/tests/snapshots/conversion_test__max_with_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\max\\limits_x y"
---
<math>
    <mrow>
        <munder>
            <mrow><mspace/><mi>max</mi></mrow>
            <mi>x</mi>
        </munder>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>y</mi>
    </mrow>
</math>
