crates/math-core/tests/snapshots/conversion_test__max_with_relation.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\max_{x\\in X}"
---
<math>
    <msub>
        <mrow><mspace/><mi>max</mi></mrow>
        <mrow>
            <mi>x</mi>
            <mo lspace="0" rspace="0">∈</mo>
            <mi>X</mi>
        </mrow>
    </msub>
</math>
