crates/math-core/tests/snapshots/conversion_test__max_with_sup_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\max\\limits^x"
---
<math>
    <mover>
        <mrow><mspace/><mi>max</mi></mrow>
        <mi>x</mi>
    </mover>
</math>
