crates/math-core/tests/snapshots/conversion_test__middle_uparrow.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left(\\frac12\\middle\\uparrow\\frac12\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac>
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo symmetric="true" lspace="0" rspace="0">↑</mo>
        <mfrac>
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
