crates/math-core/tests/snapshots/conversion_test__mkern.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mkern9mu y"
---
<math>
    <mi>x</mi>
    <mspace width="0.5em"/>
    <mi>y</mi>
</math>
